Ensured proper align for icons

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -270,12 +270,12 @@ header {
 
 #user-state {
     color: #8a8b8c;
-    margin: 2px 12px 0 0;
+    margin: 1px 12px 0 0;
 }
 
 #user-age {
     color: #8a8b8c;
-    margin: 12px 0 0 0;
+    margin: 1px 0 0 0;
 }
 
 .panel {
@@ -452,6 +452,10 @@ header {
     }
 
     #user-state {
+        font-size: 10px;
+    }
+
+    #user-age {
         font-size: 10px;
     }
 }
